Update user views

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
 
    <div class="field">
     <%= f.label :first_name %><br />
-    <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname" %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "firstname" %>
   </div>
 
   <div class="field">
     <%= f.label :last_name %><br />
-    <%= f.text_field :lastname, autocomplete: "lastname" %>
+    <%= f.text_field :last_name, autocomplete: "lastname" %>
   </div>
 
   <div class="field">
