--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing user</h1>
+<h1>Editing User Profile</h1>
 
 <%= render "form", user: @user %>
 
 <br>
 
 <div>
-  <%= link_to "Show this user", @user %> |
+  <%= link_to "Show this user", profile_path(@user.id) %> |
   <%= link_to "Back to users", users_path %>
 </div>
