--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 <div id="users">
   <% @users.each do |user| %>
     <p>
-      <%= link_to "Show this user", user %>
+      <%= link_to "Show this #{user.email}", profile_path(user.id) %>
     </p>
   <% end %>
 </div>
