--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,6 +5,17 @@
 
 <%= render @user %>
 
+<% if current_user.following?(@user) %>
+      <%= button_to "Unfollow", unfollow_path(@user) %>
+
+<% elsif current_user.sent_follow_request_to?(@user) %>
+      <%= button_to "Cancel follow request", cancel_path%>
+
+<% else %>
+      <%= button_to "Follow", follow_path(@user) %>
+      
+<% end %>
+
 <%= link_to "Back to users", users_path %>
 <%= button_to 'Log out', destroy_user_session_path, method: :delete %>
 
