Add all the users following the current user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,9 +13,14 @@
 <ol>
     <% current_user.follow_requests.each do |request| %>
         <li>
-            <%= request.followerable.email %>wants to follow you<br>
-            <%= button_to "Accept" accept_path(request.followerable) %>
-            <%= button_to "Decline" decline_path(request.followerable) %>
+            <%= request.followerable.email %> wants to follow you </br>
+            <%= button_to "Accept", accept_path(request.followerable) %>
+            <%= button_to "Decline", decline_path(request.followerable) %>
         </li>
     <% end %>
 </ol>
+
+<% current_user.followers.each do |follower| %>
+  <%= link_to follower.email, profiles_path(follower) %>is following you!
+  <%= button_to "Unfollow", unfollow_path(follower) %>
+<% end %>
