--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,6 +16,18 @@
       
 <% end %>
 
+<h2>All my posts</h2>
+<ol>
+      <% @posts.each do |post| %>
+            <li><%= post.content %>
+                  <% if post.user_id == current_user.id %>
+                  <%= button_to "Update", edit_user_post_path(post), method: :update%>
+                  <% end %>
+            </li>
+      <% end %>
+</ol>
+</br>
+
 <%= link_to "Back to users", users_path %>
 <%= button_to 'Log out', destroy_user_session_path, method: :delete %>
 
