--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,5 +6,6 @@
 
 <div>
   <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
+  <%= link_to "Back to posts", posts_path %> |
+  <%= link_to "Back to prodile", profile_path(current_user) %>
 </div>
