--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,4 +11,4 @@
   <% end %>
 </div>
 
-<%= link_to "New post", new_post_path %>
+<%= link_to "New post", new_post_path %> | <%= link_to "Back to prodile", profile_path(current_user) %>
