--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -6,5 +6,6 @@
 
 <div>
   <%= link_to "Show this user", profile_path(@user.id) %> |
-  <%= link_to "Back to users", users_path %>
+  <%= link_to "Back to users", users_path %> | 
+  <%= link_to "Back to prodile", profile_path(current_user) %>
 </div>
