--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,17 +11,19 @@
 <% elsif current_user.sent_follow_request_to?(@user) %>
       <%= button_to "Cancel follow request", cancel_path%>
 
-<% else %>
+<% elsif current_user.id != @user.id %>
       <%= button_to "Follow", follow_path(@user) %>
       
 <% end %>
+
+<%= link_to "Create a new post", new_post_path %>
 
 <h2>All my posts</h2>
 <ol>
       <% @posts.each do |post| %>
             <li><%= post.content %>
                   <% if post.user_id == current_user.id %>
-                  <%= button_to "Update", edit_user_post_path(post), method: :update%>
+                  <%= button_to "Edit ", edit_post_path(post), method: :get %>               <%= button_to "Delete", post, method: :delete %>
                   <% end %>
             </li>
       <% end %>
