--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,9 +3,12 @@
 <%= render @post %>
 
 <div>
+<% if @post.user_id == current_user.id %>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
+  <%= button_to "Destroy this post", @post, method: :delete %>
+<% end %>
+  
   <%= link_to "Back to posts", posts_path %> | 
   <%= link_to "Back to prodile", profile_path(current_user) %>
 
-  <%= button_to "Destroy this post", @post, method: :delete %>
 </div>
