Add the create method to the controller

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,9 @@
 
 <%= render @post %>
 
+<p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
 <div>
+<%= button_to 'Like', post_likes_path(@post), method: :post %> |
 <% if @post.user_id == current_user.id %>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= button_to "Destroy this post", @post, method: :delete %>
