--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: comment) do |form| %>
+<%= form_with(model: [post, comment]) do |form| %>
   <% if comment.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -16,15 +16,8 @@
     <%= form.text_area :content %>
   </div>
 
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
+  <input type="hidden" name="user_id" id="user_id" value=<%= current_user.id%> />
 
-  <div>
-    <%= form.label :commentable_id, style: "display: block" %>
-    <%= form.text_field :commentable_id %>
-  </div>
 
   <div>
     <%= form.submit %>
