--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,9 +1,10 @@
 <h1>New comment</h1>
 
-<%= render "form", comment: @comment %>
+<%= render "form", comment: @comment, post: @post %>
+
 
 <br>
 
 <div>
-  <%= link_to "Back to comments", comments_path %>
+  <%= link_to "Back to comments", post_comments_path %>
 </div>
