Add delete and edit features for comments

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+  <%= javascript_include_tag 'rails-ujs' %>
+
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
 
