--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,10 +7,9 @@
 <div>
 <% if @post.user_id == current_user.id %>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= button_to "Destroy this post", @post, method: :delete %>
+  <%= button_to "Destroy this post", @post, data: { confirm: "Are you sure you want to delete this post?" }, method: :delete %>
 <% end %>
-  
-  <%= link_to "Back to posts", posts_path %> | 
+   
   <%= link_to "Back to prodile", profile_path(current_user) %>
 
 </div>
