--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -39,7 +39,7 @@
     <%= link_to "Edit this user", edit_profile_path %> |
     
     
-    <%= button_to "Destroy this user", @user, method: :delete %>
+    <%= button_to "Destroy this user", @user, data: { confirm: "Are you sure you want to delete your account?" }, method: :delete %>
   </div>
 <% end %>
 
