--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,14 +10,14 @@
     <%= post.content %>
   </p>
 
-<% pre_like = @post.likes.find { |like| like.user_id == current_user.id} %>
+<% pre_like = post.likes.find { |like| like.user_id == current_user.id} %>
 <% if pre_like %>
-  <%= button_to 'Unlike', post_like_path(@post, pre_like), method: :delete %>
+  <%= button_to 'Unlike', post_like_path(post, pre_like), method: :delete %>
 <% else %>
-  <%= button_to 'Like', post_likes_path(@post), method: :post %>
+  <%= button_to 'Like', post_likes_path(post), method: :post %>
 <% end %>
 
-<%= button_to "New comment", new_post_comment_path(@post), method: :get %>
+<%= button_to "New comment", new_post_comment_path(post), method: :get %>
 
 
 <h2>Comments:</h2>
@@ -26,9 +26,9 @@
       <li>
           Author: <%= comment.user.first_name %><br>
           comment: <%= comment.content %>
-         <%= link_to "Edit Comment", edit_post_comment_path(@post, comment), class: "btn btn-primary" %> |
+         <%= link_to "Edit Comment", edit_post_comment_path(post, comment), class: "btn btn-primary" %> |
          
-          <%= button_to "Delete Comment", post_comment_path(@post, comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?" }, class: "btn btn-danger" %>
+          <%= button_to "Delete Comment", post_comment_path(post, comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?" }, class: "btn btn-danger" %>
 
       </li>
   <% end %>
