Add image field to registrations

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :image %><br />
+    <%= f.file_field :image %>
+  </div>
+
+  <div class="field">
     <%= f.label :birthdate %><br />
     <%= f.date_field :birthdate, autocomplete: "birthdate" %>
   </div>
