--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,13 @@
 <h1><%= @user.first_name %></h1>
-
+<% if @user.image.attached? %>
+      <%= image_tag(@user.image, style: "
+            display: inline-block;
+            width: 50px;
+            border-radius: 50%;
+            height: 50px;
+            object-fit: cover;"
+      )%>
+<% end %>
 
 <p style="color: green"><%= notice %></p>
 
@@ -36,7 +44,7 @@
 
 <% if @user.id == current_user.id %>
   <div>
-    <%= link_to "Edit this user", edit_profile_path %> |
+    <%= link_to "Edit this user", edit_user_registration_path %> |
     
     
     <%= button_to "Destroy this user", @user, data: { confirm: "Are you sure you want to delete your account?" }, method: :delete %>
