--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,6 +7,14 @@
             height: 50px;
             object-fit: cover;"
       )%>
+      <% else %>
+  <%= image_tag('default-profile.webp', style: "
+          display: inline-block;
+          width: 50px;
+          border-radius: 50%;
+          height: 50px;
+          object-fit: cover;"
+  ) %>
 <% end %>
 
 <p style="color: green"><%= notice %></p>
