--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,18 @@
   <% @users.each do |user| %>
     <p>
       <%= link_to "Show #{user.first_name}", profile_path(user.id) %>
+      <% if current_user.following?(user) %>
+      <%= button_to "Unfollow", unfollow_path(user) %>
+
+        <% elsif current_user.sent_follow_request_to?(user) %>
+              <%= button_to "Cancel follow request", cancel_path(user)%>
+
+        <% elsif current_user.id != user.id %>
+              <%= button_to "Follow", follow_path(user) %>
+              
+        <% end %>
     </p>
+    <hr>
   <% end %>
 </div>
 
