--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -21,6 +21,9 @@
 
 <%= render @user %>
 
+<p><%= @user.followers.count %> followers </p>
+<p><%= @user.posts.count %> posts </p>
+
 <% if current_user.following?(@user) %>
       <%= button_to "Unfollow", unfollow_path(@user) %>
 
