--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,23 @@
 <div id="posts">
   <% @posts.each do |post| %>
       <% if current_user.following.include?(post.user) %>
+          <% if post.user.image.attached? %>
+      <%= image_tag(post.user.image, style: "
+            display: inline-block;
+            width: 50px;
+            border-radius: 50%;
+            height: 50px;
+            object-fit: cover;"
+      )%>
+      <% else %>
+  <%= image_tag('default-profile.webp', style: "
+          display: inline-block;
+          width: 50px;
+          border-radius: 50%;
+          height: 50px;
+          object-fit: cover;"
+  ) %>
+<% end %>
           <%= render post %>
           <p>
             <%= link_to "Show this post", post %>
