--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
-<h1> All the Posts</h1>
+
+<% if current_user %>
+<h1> Homepage </h1>
+
+  <h2> <%= current_user.email %> </h2>
+  <%= link_to "Edit Account", edit_user_registration_path %> 
+  <%= button_to "Log Out", destroy_user_session_path, data:{turbo:"false"}, method: :delete %>
 
 <div id="posts">
   <% @posts.each do |post| %>
@@ -14,3 +20,8 @@
 </div>
 
 <%= link_to "New post", new_post_path %> | <%= link_to "Back to profile", profile_path(current_user) %>
+<% else %>
+  <%= link_to "Signin", new_user_session_path %>
+  <%= link_to "Create Account", new_user_registration_path %>
+<% end %>
+
