--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -18,6 +18,9 @@
 <% end %>
 
 <p style="color: green"><%= notice %></p>
+<%= button_to create_chat_user_profile_path(@user, @profile), method: :post do %>
+  <span><i class="fa-solid fa-message"></i></span>
+<% end %>
 
 <%= render @user %>
 
