--- a/app/views/private_chats/show.html.erb
+++ b/app/views/private_chats/show.html.erb
@@ -13,12 +13,13 @@
     <% end %>
   </div>
 
-  <%= simple_form_for [@user, @profile, @private_chat, @message],
+  <%= simple_form_for [@user, @profile, @private_chat, @message], 
+    url: user_profile_private_chat_messages_path(@user, @profile, @private_chat),
     html: { data: { action: "turbo:submit-end->private-chat-subscription#resetForm" }, class: "d-flex"} do |f| %>
-    <%= f.input :content,
-      label: false,
-      placeholder: "Message to #{profile_to_show.nickname}",
-      wrapper_html: {class: "flex-grow-1"} %>
-    <%= f.submit "Send", class: "btn btn-primary mb-3 send__btn" %>
-  <% end %>
+  <%= f.input :content,
+    label: false,
+    placeholder: "Message to #{profile_to_show.nickname}",
+    wrapper_html: { class: "flex-grow-1" } %>
+  <%= f.submit "Send", class: "btn btn-primary mb-3 send__btn" %>
+<% end %>
 </div>
