Notify users when they receive a new message

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/notifications/index.html.erb</p>
 <ul>
 
-<% @notifications.each do |notification|%>
+<% @notifications.reverse.each do |notification|%>
 
 <li>
 <%= notification.message %>
