--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,7 +20,7 @@
 <p style="color: green"><%= notice %></p>
 <%= button_to create_chat_user_profile_path(@user, @profile), method: :post do %>
   <span><i class="fa-solid fa-message"></i></span>
-  Create Chat
+  Chat with <%= @user.first_name %>
 <% end %>
 
 <%= render @user %>
