--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Users</h1>
+<h1 class="text-3xl font-bold underline">
+    Hello world!
+</h1>
 
 <div id="users">
   <% @users.each do |user| %>
