--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-blue-100">
   <%= javascript_include_tag 'rails-ujs' %>
 
    <p class="notice"><%= notice %></p>
