--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,21 +2,35 @@
 
 
 <% if current_user %>
-<h1> Homepage </h1>
+<div class="container mx-auto px-6">
 
-  <h2> <%= current_user.email %> </h2>
-  <%= link_to "Edit Account", edit_user_registration_path %> 
-  <%= button_to "Log Out", destroy_user_session_path, data:{turbo:"false"}, method: :delete %>
+  <h1 class="text-2xl font-bold uppercase pb-6 pt-6 underline"> Actuality</h1>
+    <%# link_to "Edit Account", edit_user_registration_path %> 
+    <%# button_to "Log Out", destroy_user_session_path, data:{turbo:"false"}, method: :delete %>
 
-<div id="posts">
-  <% @posts.each do |post| %>
-  <p>Author: <%= post.user.id == current_user.id ? "Me" : post.user.first_name %></p>
-  <p><%= post.content %></p>
-  <p><%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
-   <p><%= link_to "Show this post", post %></p>
-  <hr>
-    
-  <% end %>
+  <div class="">
+    <div id="posts" class="w-full ">
+
+      <% @posts.each do |post| %>
+      <%= link_to post do %>
+        <div class="w-1/2  ml-auto mr-auto border-b-2 border-black border-solid">
+          <p class="font-bold">Author: <%= post.user.id == current_user.id ? "Me" : post.user.first_name %></p>
+          <p><%= post.content %></p>
+          <div class="grid grid-cols-2">
+          <div>
+            <p class=""><%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+          </div>
+            
+          <div> <%= button_to "Add a comment", new_post_comment_path(post), method: :get, class: "" %>
+          
+          </div>
+          </div>
+          
+        </div>
+      <% end %>
+    <% end %>
+    </div>
+  </div>
 </div>
 
 <%= link_to "New post", new_post_path %> | <%= link_to "Back to profile", profile_path(current_user) %>
